--- a/.github/workflows/pipeline-ci-cd.yml
+++ b/.github/workflows/pipeline-ci-cd.yml
@@ -48,6 +48,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd ${{ env.PROJECT_PATH }}
-            sudo docker compose pull
-            sudo docker compose down
-            sudo docker compose up -d
+            sudo docker compose -p cinema pull
+            sudo docker compose -p cinema down
+            sudo docker compose -p cinema up -d
