--- a/.github/workflows/pipeline-ci-cd.yml
+++ b/.github/workflows/pipeline-ci-cd.yml
@@ -11,8 +11,62 @@ env:
   DOCKER_SERVICE: backend-api 
 
 jobs:
+  # Analyse Qualité Code
+  sonarqube-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: >
+            -Dsonar.analysis.autoDisabled=true
+
+  # Scan Sécurité Docker
+  trivy-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Trivy
+        run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+          trivy --version
+      
+      - name: Build Docker Image
+        run: docker build -t ${{ env.IMAGE_NAME }} .
+      
+      - name: Scan Docker Image
+        run: trivy image ${{ env.IMAGE_NAME }}
+
+  # Scan Vulnérabilités Dépendances
+  snyk-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Snyk
+        run: npm install -g snyk
+      
+      - name: Snyk Auth
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+      
+      - name: Snyk Scan
+        run: snyk test --all-projects
+
+  # Build et Push
   Build_And_Push:
     runs-on: ubuntu-latest
+    needs: [sonarqube-scan, trivy-scan, snyk-scan]
     steps:
       - name: checkout code
         uses: actions/checkout@v5
